--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,12 +9,15 @@ body {
   line-height: 27px;
   font-family: "Open Sans", sans-serif;
   color: $default;
+  overflow-x: hidden;
+  min-width: 320px;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  position: relative;
 }
 
 .main {
@@ -28,4 +31,27 @@ body {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  li {
+    padding: 0 15px;
+  }
+  li.slick-active {
+    button {
+      background-color: #ffef35;
+    }
+  }
+  button {
+    width: 8px;
+    height: 8px;
+    background-color: $title;
+    border: none;
+    border-radius: 50%;
+    padding: 0;
+    font-size: 0;
+  }
 }
