--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -50,3 +50,208 @@
     max-width: 585px;
   }
 }
+
+// Collection section
+
+.new-collection {
+  text-align: center;
+  padding: 46px 0 105px;
+  &__title {
+    color: $title;
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    line-height: 51px;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 252px;
+      height: 1px;
+      background-color: #6d7278;
+      border: 1px solid #979797;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: 0 auto;
+    }
+  }
+  &__text {
+    max-width: 730px;
+    margin: 0 auto 30px;
+  }
+}
+
+.collection {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 30px;
+  &__item {
+    position: relative;
+    &:hover {
+      .collection__info {
+        opacity: 1;
+      }
+    }
+  }
+  &__images {
+    min-height: 350px;
+    object-fit: cover;
+  }
+  &__info {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba($color: #fff, $alpha: 0.6);
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.5s;
+  }
+
+  &__info-title {
+    font-family: "Montserrat", sans-serif;
+    color: $title;
+    font-size: 20px;
+    line-height: 25px;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 80%;
+      height: 1px;
+      background-color: #6d7278;
+      border: 1px solid #979797;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: 0 auto;
+    }
+  }
+  &__info-text {
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+  }
+}
+
+// Decor section
+
+.decor {
+  padding: 170px 0 155px;
+  background-image: url(../images/content/decor-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  // min-height: 600px;
+  &__title {
+    font-family: "Montserrat", sans-serif;
+    color: $title;
+    font-size: 60px;
+    line-height: 80px;
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+    position: relative;
+    max-width: 730px;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 200px;
+      height: 1px;
+      background-color: #6d7278;
+      border: 1px solid #979797;
+      left: 0;
+      bottom: 0;
+      max-width: 540px;
+    }
+  }
+  &__text {
+    max-width: 540px;
+  }
+}
+
+//  Work-path section
+
+.work-path {
+  padding: 79px 0 30px;
+  &__title {
+    @extend %title-font;
+    text-align: center;
+    color: $title;
+    margin-bottom: 40px;
+    font-size: 36px;
+    line-height: 51px;
+  }
+  &__items-box {
+    display: flex;
+    border-bottom: 2px solid rgba($color: $title, $alpha: 0.7);
+    position: relative;
+    align-items: flex-end;
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: $title;
+    }
+  }
+
+  &__item {
+    width: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+    height: 100%;
+  }
+  &____item--consultation {
+  }
+  &__item--production {
+    padding-bottom: 38px;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 2px;
+      height: 20px;
+      background-color: rgba($color: $title, $alpha: 0.7);
+      bottom: 0;
+      left: 0;
+    }
+  }
+
+  &__item--measuring {
+    padding-top: 38px;
+    margin-left: 305px;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 2px;
+      height: 20px;
+      background-color: rgba($color: $title, $alpha: 0.7);
+      top: 0;
+      left: 0;
+    }
+  }
+  &__item-title {
+    margin-left: 13px;
+    @extend %title-font;
+    color: $title;
+  }
+  &__item-text {
+    margin-top: 13px;
+  }
+
+  .work-path__item + .work-path__item {
+    margin-left: 317px;
+  }
+}
