--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -1,3 +1,27 @@
+// Breadcrumbs
+
+.breadcrumbs {
+  background: rgba($color: #dfdfdf, $alpha: 0.5);
+  padding: 13px 14px;
+  &__list {
+    display: flex;
+  }
+  &__link {
+    color: $default;
+    font-size: 14px;
+  }
+  &__item::after {
+    content: "/";
+    margin-left: -4px;
+    margin-right: 4px;
+  }
+  &__item:last-child::after {
+    display: none;
+  }
+}
+
+// Top section
+
 .top {
   &__inner {
     padding-bottom: 70px;
@@ -55,7 +79,7 @@
 
 .new-collection {
   text-align: center;
-  padding: 46px 0 105px;
+  padding: 46px 0 35px;
   &__title {
     color: $title;
     font-family: "Montserrat", sans-serif;
@@ -87,6 +111,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 30px;
+  padding-bottom: 72px;
   &__item {
     position: relative;
     &:hover {
