--- a/app/scss/_blog.scss
+++ b/app/scss/_blog.scss
@@ -42,6 +42,137 @@
   &__social-item {
     margin-right: 20px;
   }
+
+  &__items {
+    max-width: 730px;
+  }
+
+  &__item {
+    margin-bottom: 80px;
+  }
+  &__item-img {
+    max-width: 730px;
+  }
+  &__item-info {
+    padding: 25px 0 10px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #707070;
+    a {
+      color: inherit;
+    }
+  }
+
+  &__item-title {
+    font-size: 24px;
+    line-height: 38px;
+    @extend %title-font;
+    margin-bottom: 6px;
+  }
+
+  &__blockquote {
+    background: rgba(223, 223, 223, 0.5);
+    padding: 54px 64px;
+    margin-bottom: 50px;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 38px;
+    color: $title;
+    text-align: center;
+  }
+  &__blockquote-author {
+    font-size: 16px;
+    line-height: 22px;
+    color: $title;
+    @extend %title-font;
+    margin-top: 23px;
+    padding-top: 23px;
+    position: relative;
+    font-style: normal;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      border: 1px solid #979797;
+      border-radius: 1px;
+      width: 200px;
+      height: 1px;
+      background: #6d7278;
+    }
+  }
+  &__item-popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+.article-popup {
+  &__box {
+    position: relative;
+  }
+}
+
+.article-slider {
+  &__arrow {
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 50%;
+    padding: 0;
+    transform: translateY(-50%);
+    cursor: pointer;
+    z-index: 1;
+  }
+  &__arrow-left {
+    left: 16px;
+  }
+  &__arrow-right {
+    right: 16px;
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__list {
+    display: flex;
+  }
+  &__list-item {
+    margin: 0 6px;
+  }
+  &__arrow {
+    margin: 0 6px;
+  }
+  &__arrow--disabled {
+    display: none;
+  }
+  &__list-num {
+    font-size: 14px;
+    color: #707070;
+    font-weight: 600;
+  }
+  &__list-num--active {
+    color: $title;
+  }
+}
+.pagination__arrow {
+}
+.pagination__arrow-icon {
+}
+.pagination__list {
+}
+.pagination__list-item {
+}
+.pagination__list-num {
+}
+.pagination__list-num--active {
 }
 
 .recent-posts {
