--- a/app/scss/_blog.scss
+++ b/app/scss/_blog.scss
@@ -111,6 +111,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  &__item-link {
+    color: $title;
+  }
 }
 .article-popup {
   &__box {
@@ -151,7 +154,8 @@
     margin: 0 6px;
   }
   &__arrow--disabled {
-    display: none;
+    opacity: 0;
+    pointer-events: none;
   }
   &__list-num {
     font-size: 14px;
