--- a/app/scss/_blog-one.scss
+++ b/app/scss/_blog-one.scss
@@ -10,6 +10,7 @@
       line-height: 38px;
       color: $title;
       padding: 0 40px;
+      margin-bottom: 30px;
     }
     .blog__blockquote-author::before {
       margin-right: auto;
